kustomize/base/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-project-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    # Without host - works on any IP/domain
    - http:
        paths:
          - path: /api/episode
            pathType: Prefix
            backend:
              service:
                name: episode-api-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: anime-api-service
                port:
                  number: 8080
          # Everything else is Frontend (React SPA)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
